--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,7 @@ EditorStartupMap=/Game/Maps/Map_Starter.Map_Starter
 TransitionMap=/Game/Maps/Menus/Map_Transition.Map_Transition
 GlobalDefaultGameMode=/Game/Game/GM_Game.GM_Game_C
 GlobalDefaultServerGameMode=/Game/Game/GM_Game.GM_Game_C
+GameInstanceClass=/Game/Game/GI_MainGameInstance.GI_MainGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
