Dropping Items form Inv

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,11 +7,11 @@ a.URO.DisableInterpolation=1 ; If interpolation is enabled, the character may ji
 bTickPhysicsAsync=False ; If enabled, the character may fall through the ground when landing while the ragdoll is active.
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Map_Starter.Map_Starter
 EditorStartupMap=/Game/Maps/Map_Starter.Map_Starter
 TransitionMap=/Game/Maps/Menus/Map_Transition.Map_Transition
-GlobalDefaultGameMode=/Game/Game/GM_Game.GM_Game_C
-GlobalDefaultServerGameMode=/Game/Game/GM_Game.GM_Game_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Game/GI_MainGameInstance.GI_MainGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
