--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,10 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.MotionBlur=True
+r.MSAACount=1
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.AntiAliasingMethod=4
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
