Implemented Lock-On

--- a/P_R22VOID.uproject
+++ b/P_R22VOID.uproject
@@ -44,7 +44,7 @@
 		},
 		{
 			"Name": "LockOnTarget",
-			"Enabled": false,
+			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d58106fca28446ec88caad16c5a35fe8"
 		},
 		{
@@ -74,7 +74,7 @@
 		},
 		{
 			"Name": "DidItHit",
-			"Enabled": true
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
