--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,6 @@
 Net.IsPushModelEnabled=True ; Required for more efficient properties replication on the server.
 p.NetUsePackedMovementRPCs=1 ; Required for view network smoothing on the listen server.
 a.URO.DisableInterpolation=1 ; If interpolation is enabled, the character may jitter during rotation and foot locking will not be able to work properly.
-
 [/Script/Engine.LocalPlayer] AspectRatioAxisConstraint=AspectRatio_MaintainYFOV
 
 [/Script/Engine.PhysicsSettings]
@@ -100,11 +99,8 @@ DefaultPlatformService=Steam
 bEnabled=true
 SteamDevAppId=480
 
-; If using Sessions
-; bInitServerOnClient=true
-
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -165,4 +161,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/DLSS.DLSSSettings]
 bEnableDLSSInEditorViewports=True
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Static
 
