Combat Test Map

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -98,6 +98,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Menus/Map_Transition")
 +MapsToCook=(FilePath="/Game/Maps/Nordic/Map_Nordic")
 +MapsToCook=(FilePath="/Game/Maps/Menus/Map_Menu_Main")
++MapsToCook=(FilePath="/Game/Maps/Map_Combat_Testing")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
