Changed Sounds on hit

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -114,6 +114,7 @@ bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/Survival_Anims")
 +DirectoriesToNeverCook=(Path="/Game/UTA")
 +DirectoriesToNeverCook=(Path="/Game/Whooshes_SFX")
++DirectoriesToNeverCook=(Path="/Game/Ultimate_SFX")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
