Fixing issues in the build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -115,6 +115,9 @@ bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/Ultimate_SFX")
 +DirectoriesToNeverCook=(Path="/Game/UTA")
 +DirectoriesToNeverCook=(Path="/Game/Whooshes_SFX")
++DirectoriesToNeverCook=(Path="/Game/BSP_ZombieAnims")
++DirectoriesToNeverCook=(Path="/Game/GenericNPCAnimPack")
++DirectoriesToNeverCook=(Path="/Game/PoseAnimations")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
