--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,4 @@
-[SystemSettings]
+onlin[SystemSettings]
 Net.IsPushModelEnabled=True ; Required for more efficient properties replication on the server.
 p.NetUsePackedMovementRPCs=1 ; Required for view network smoothing on the listen server.
 a.URO.DisableInterpolation=1 ; If interpolation is enabled, the character may jitter during rotation and foot locking will not be able to work properly.
@@ -73,6 +73,11 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/P_R22VOID")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/P_R22VOID")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="P_R22VOIDGameModeBase")
+!NetDriverDefinitions=ClearArray
+; Uncomment the next line if you are using the Null Subsystem
+;-NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
+; Uncomment the next line if you are using the Steam Subsystem
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -92,17 +97,26 @@ ManualIPAddress=
 bRemoteExecution=True
 
 [/Script/Engine.GameEngine]
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
 
 [OnlineSubsystemSteam]
 bEnabled=true
+bInitServerOnClient=true
 SteamDevAppId=480
+SteamAppId=480
+GameServerQueryPort=27015
+bRelaunchInSteam=false
+GameVersion=1.0.0.0
+bVACEnabled=1
+bAllowP2PPacketRelay=true
+P2PConnectionTimeout=90
+; This is to prevent subsystem from reading other achievements that may be defined in parent .ini
+Achievement_0_Id=""
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
