--- a/P_R22VOID.uproject
+++ b/P_R22VOID.uproject
@@ -126,6 +126,14 @@
 			"Name": "CheckCompileBP",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/be3b2113774d4c919b374108984ca3fc"
+		},
+		{
+			"Name": "AdvancedSteamSessions",
+			"Enabled": false
+		},
+		{
+			"Name": "AdvancedSessions",
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
