--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,7 +6,17 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagTableList=/Game/Characters/Player/Blueprints/DT_Actions.DT_Actions
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Action.Attack",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Melee",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Melee.Charge",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Melee.Hold",DevComment="")
++GameplayTagList=(Tag="Action.Weapon",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Large",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Large.Holster",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Small",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Small.Holster",DevComment="")
 +GameplayTagList=(Tag="Als.RotationMode.LockOn",DevComment="")
 
