--- a/P_R22VOID.uproject
+++ b/P_R22VOID.uproject
@@ -153,6 +153,11 @@
 				"Win64"
 			]
 		},
+		{
+			"Name": "GBWPowerfulHit",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/68a19cc3b574484ab65c96a4b8e8c135"
+		}
 	],
 	"TargetPlatforms": [
 		"Windows",
