--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,16 +13,20 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attack.BeHit",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Melee.Charge.Start",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Hold",DevComment="")
 +GameplayTagList=(Tag="Action.Camp",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Enemy",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Friendly",DevComment="")
++GameplayTagList=(Tag="Action.Dodge",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large.Holster",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Small.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Holster",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Shield",DevComment="")
 +GameplayTagList=(Tag="Als.RotationMode.LockOn",DevComment="")
