--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,11 +11,14 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attack",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.BeHit",DevComment="")
++GameplayTagList=(Tag="Action.Attack.BeHit.Block",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge.Start",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Hold",DevComment="")
++GameplayTagList=(Tag="Action.Blocking",DevComment="")
++GameplayTagList=(Tag="Action.Blocking.Exit",DevComment="")
 +GameplayTagList=(Tag="Action.Camp",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Enemy",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Friendly",DevComment="")
@@ -24,6 +27,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large.Holster",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Sword_Small.Blocking",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit.Heavy",DevComment="")
