cleaning up more movement and player character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -182,6 +182,13 @@ ManualIPAddress=
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
 +EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="AI")))
++EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
++EditProfiles=(Name="Spectator",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="AI")))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="AI")))
++EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="AI")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
