--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,11 +7,14 @@ AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Characters/Player/Blueprints/DT_Actions.DT_Actions
++GameplayTagRedirects=(OldTagName="Action.Dodge",NewTagName="Action.Movement.Dodge")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attack",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.BeHit",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.BeHit.Block",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Hit",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Hit.Up",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge.Start",DevComment="")
@@ -22,15 +25,20 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Camp",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Enemy",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Friendly",DevComment="")
-+GameplayTagList=(Tag="Action.Dodge",DevComment="")
++GameplayTagList=(Tag="Action.Movement",DevComment="")
++GameplayTagList=(Tag="Action.Movement.Dodge",DevComment="")
++GameplayTagList=(Tag="Action.Status",DevComment="")
++GameplayTagList=(Tag="Action.Status.Dead",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Inventory",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Inventory.Active",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Inventory.Equip",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Inventory.Holster",DevComment="")
++GameplayTagList=(Tag="Action.Weapon.Inventory.Unequip",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Large.Holster",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small",DevComment="")
-+GameplayTagList=(Tag="Action.Weapon.Sword_Small.Blocking",DevComment="")
-+GameplayTagList=(Tag="Action.Weapon.Sword_Small.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit",DevComment="")
-+GameplayTagList=(Tag="Action.Weapon.Sword_Small.Hit.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Holster",DevComment="")
 +GameplayTagList=(Tag="Action.Weapon.Sword_Small.Shield",DevComment="")
 +GameplayTagList=(Tag="Als.RotationMode.LockOn",DevComment="")
