--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attack.BeHit",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.BeHit.Block",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Hit",DevComment="")
++GameplayTagList=(Tag="Action.Attack.Hit.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Hit.Up",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Charge",DevComment="")
@@ -21,9 +22,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Attack.Melee.Heavy",DevComment="")
 +GameplayTagList=(Tag="Action.Attack.Melee.Hold",DevComment="")
 +GameplayTagList=(Tag="Action.Blocking",DevComment="")
++GameplayTagList=(Tag="Action.Blocking.Counter",DevComment="")
 +GameplayTagList=(Tag="Action.Blocking.Exit",DevComment="")
 +GameplayTagList=(Tag="Action.Camp",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Enemy",DevComment="")
++GameplayTagList=(Tag="Action.Camp.Enemy.Boss",DevComment="")
 +GameplayTagList=(Tag="Action.Camp.Friendly",DevComment="")
 +GameplayTagList=(Tag="Action.Movement",DevComment="")
 +GameplayTagList=(Tag="Action.Movement.Dodge",DevComment="")
