--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -175,20 +175,23 @@ ManualIPAddress=
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="AI")
-+EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
-+EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
-+EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
-+EditProfiles=(Name="Trigger",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Procedural")
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Overlap)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="AI",Response=ECR_Ignore),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Ignore)))
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
-+EditProfiles=(Name="UI",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
-+EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
-+EditProfiles=(Name="NoCollision",CustomResponses=((Channel="AI")))
-+EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
-+EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Overlap)))
-+EditProfiles=(Name="Spectator",CustomResponses=((Channel="AI",Response=ECR_Ignore)))
++EditProfiles=(Name="UI",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="AI"),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Ignore),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="AI",Response=ECR_Overlap),(Channel="Procedural",Response=ECR_Ignore)))
++EditProfiles=(Name="Spectator",CustomResponses=((Channel="AI",Response=ECR_Ignore),(Channel="Procedural",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="AI")))
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="AI")))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="AI"),(Channel="Procedural",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="AI")))
++EditProfiles=(Name="PhysicsActor",CustomResponses=((Channel="Procedural")))
++EditProfiles=(Name="Vehicle",CustomResponses=((Channel="Procedural",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
