--- a/Config/IOS/IOSEngine.ini
+++ b/Config/IOS/IOSEngine.ini
@@ -4,6 +4,7 @@ DefaultPlatformService=RedpointEOS
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_13
 bEnableSignInWithAppleSupport=True
+bShipForBitcode=False
 
 [OnlineSubsystemApple]
 bEnabled=True
