Getting ready for new pickup system

--- a/P_R22VOID.uproject
+++ b/P_R22VOID.uproject
@@ -178,6 +178,11 @@
 				"Mac",
 				"Linux"
 			]
+		},
+		{
+			"Name": "DynamicDatatable",
+			"Enabled": true,
+			"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/aaad9edf714e45b4968fc2942eb11666"
 		}
 	],
 	"TargetPlatforms": [
