--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -227,3 +227,6 @@ bShipForBitcode=False
 +NetDriverDefinitions=(DefName="BeaconNetDriver",DriverClassName="/Script/OnlineSubsystemRedpointEOS.EOSNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
 +NetDriverDefinitions=(DefName="DemoNetDriver",DriverClassName="/Script/Engine.DemoNetDriver",DriverClassNameFallback="/Script/Engine.DemoNetDriver")
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
