--- a/P_R22VOID.uproject
+++ b/P_R22VOID.uproject
@@ -174,6 +174,7 @@
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/519f5dc62d714ba8b116e4763ba1e542",
 			"SupportedTargetPlatforms": [
 				"IOS",
+				"Android",
 				"Win64",
 				"Mac",
 				"Linux"
