Changing slots to icons

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -228,5 +228,5 @@ bShipForBitcode=False
 +NetDriverDefinitions=(DefName="DemoNetDriver",DriverClassName="/Script/Engine.DemoNetDriver",DriverClassNameFallback="/Script/Engine.DemoNetDriver")
 
 [/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=Always
+RenderFocusRule=Never
 
